Fixes post header visibility issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -501,6 +501,9 @@ a:after {
 /* ==========================================================================
    News & Articles
    ========================================================================== */
+.post-header {
+    padding-top: 40px;
+}
 .post-title {
     border-bottom: 1px solid #3498db;
     padding: 10px 0;
